fix: article card type style and caption spacing

--- a/packages/gatsby-theme-carbon/src/components/Caption/caption.scss
+++ b/packages/gatsby-theme-carbon/src/components/Caption/caption.scss
@@ -11,8 +11,8 @@ img + .#{$prefix}--caption {
 }
 
 // Caption after video
-[class^='Video-module--video'] + .#{$prefix}--caption {
-  margin-top: -$spacing-08;
+div[class^='Video-module--video'] + .#{$prefix}--caption {
+  margin-top: -4rem;
 }
 
 // Responsive by default
